# docbrief

./: NEXT-STEPS.md  README.md  STATUS.md  pyproject.toml
docbrief/: __init__.py  cli.py  processor.py  reader.py  writer.py
tests/: test_processor.py  test_reader.py  test_writer.py
